reroute to app_pets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
   </head><br>
 
   <body>
+  <% flash.each do |type, message| %>
+     <p>💥 <%= message %> 💥</p>
+   <% end %>
     <%= yield %>
   </body>
 </html>
